# awesome-playground

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
src/awesome_playground/: __init__.py  awesome_service.py
tests/: __init__.py  test_awesome_service.py
